--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 name's sach1, i'm from italy and i mostly dabble in typescript and rust.
-proudly a *nix enthusiast and light novel connoisseur.
+proudly a *nix enthusiast and light novel connoisseur; i embrace open source and contribute when i can. 
+almost forgot to mention that i use arch btw.
 
-contact info below:
+contact info:
   - discord :: sach#0001
   - twitter :: ya_sach1
+  - discord guild where i hang out :: https://discord.gg/PHbyke9a
+  
+  
